# IDA_ClassInformer_PlugIn

./: .gitignore  CMakeLists.txt  Compat.h  Main.cpp  Main.h  MainDialog.cpp  MainDialog.h  RTTI.cpp  RTTI.h  StdAfx.h  Vftable.cpp  Vftable.h  dialog.ui
